# neutrino-cmake

./: CMakeLists.txt  README.md
cmake/: NeutrinoCompiler.cmake  NeutrinoHostTools.cmake  NeutrinoInit.cmake  NeutrinoInstall.cmake  NeutrinoOptions.cmake  NeutrinoPolicies.cmake  NeutrinoSanitizers.cmake  NeutrinoWarnings.cmake
cmake/patches/: patch_cmake_minimum.cmake
cmake/tests/: test_fetch_doctest.cmake
docs/: creating-a-library.md  getting-started.md
docs/dependencies/: README.md  SDL2.md  SDL3.md  benchmark.md  datascript.md  doctest.md  euler.md  expected.md  failsafe.md  imgui.md  libiff.md  mio.md  mz-explode.md  scaler.md  sdlpp.md  termcolor.md  utf8cpp.md  xsimd.md
docs/modules/: compiler.md  host-tools.md  install.md  options.md  sanitizers.md  warnings.md
scripts/: neutrino-new.py
